# WarpEngine

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CmakeLists.txt  bootstrap.bat  main.cm  main.wpp
Source/: CMakeLists.txt  CmakeLists.txt  NewMain.cpp  OnceVulkanMain.cpp
Source/Core/: Allocator.hpp  Auxiliary.hpp  Collection.hpp  Core.cpp  Core.hpp  Data.hpp  Exception.hpp  Inherit.hpp  Input.hpp  Log.h  Logger.hpp  MIResource.cpp  MIResource.h  MIStl.h  Math.hpp  Modifier.cpp  Modifier.hpp  Object.cpp  Object.hpp  Output.hpp  Sha256.h  TypeName.hpp  Utils.cpp  Utils.h  Visitor.cpp  Visitor.hpp  observer_ptr.hpp  own_ptr.hpp
Source/Core/Clipper2/: clipper.core.h  clipper.engine.cpp  clipper.offset.cpp
Source/Core/ankerlmap/: unordered_dense.h
Source/Data/: Data.hpp  DataBuffer.cpp  DataBuffer.hpp  DataBufferString.cpp  DataBufferString.hpp  DataBufferUnorderedUniformVector.cpp  DataBufferUnorderedUniformVector.hpp  DataBufferVector.cpp  DataBufferVector.hpp  DataLayout.cpp  DataLayout.hpp  DataLayoutStructureDescriptor.cpp  DataLayoutStructureDescriptor.hpp  DataLayoutStructureDescriptorPack.cpp  DataLayoutStructureDescriptorPack.hpp  DataLayoutStructureDescriptorParser.cpp  DataLayoutStructureDescriptorParser.hpp  DataLayoutUnorderedBlockVector.cpp  DataLayoutUnorderedBlockVector.hpp  DataLayoutUnorderedUniformChunkVector.cpp  DataLayoutUnorderedUniformChunkVector.hpp  DataLayoutUnorderedVector.cpp  DataLayoutUnorderedVector.hpp  DataPacket.cpp  DataPacket.hpp  DataPacketDataStructreInfoPack.cpp  DataPacketDataStructreInfoPack.hpp  DataPacketDataStructureDescriptor.cpp  DataPacketDataStructureDescriptor.hpp  DataPacketDataStructureDescriptorParser.cpp  DataPacketDataStructureDescriptorParser.hpp  DataTypes.cpp  DataTypes.hpp  DataUnion.cpp  DataUnion.hpp
Source/DensifySystem/: Collection.cpp  Collection.hpp
Source/Engine/: EngineContext.cpp  EngineContext.hpp  Window.cpp
Source/Events/: WindowEvent.hpp
Source/Graphics/: GPUFactory.cpp  GPUFactory.h  GPUResource.cpp  GPUResource.h  GPUResourceBase.h  GPUResourceBuilder.cpp  GPUResourceBuilder.h  GPUResourceHandle.h  GPUResourceManager.cpp  GPUResourceManager.h  GPUShaderCompiler.cpp  MaterialInfo.cpp  MaterialInfo.hpp  MaterialInstance.cpp  MaterialInstance.hpp  MaterialParameter.cpp  MaterialParameter.hpp  MaterialShader.cpp  MaterialShader.hpp  MaterialSource.cpp  MaterialSource.hpp  RenderResource.cpp  RenderResource.hpp  RenderStage.cpp  RenderStage.hpp  RenderTaskList.cpp  RenderTaskList.hpp  VulkanFiles.h
Source/Graphics/Builder/: GPUBufferBuilder.h  GPUCommandBufferBuilder.cpp  GPUCommandBufferBuilder.h  GPUCommandPoolBuilder.cpp  GPUCommandPoolBuilder.h  GPUDescriptorPoolBuilder.h  GPUDescriptorSetLayoutBuilder.cpp  GPUDescriptorSetLayoutBuilder.h  GPUFenceBuilder.h  GPUFrameBufferBuilder.h  GPUGraphicsPipelineBuilder.h  GPUImageBuilder.h  GPUPipelineLayoutBuilder.cpp  GPUPipelineLayoutBuilder.h  GPURenderPassBuilder.h  GPUSemaphoreBuilder.h  GPUSwapChainBuilder.h
Source/Graphics/GPUResource/: GPUBuffer.cpp  GPUBuffer.h  GPUCommandBuffer.cpp  GPUCommandBuffer.h  GPUCommandPool.h  GPUDescriptorPool.h  GPUDescriptorSetLayout.cpp  GPUFence.cpp  GPUFence.h  GPUFrameBuffer.h  GPUGraphicsPipeline.h  GPUImage.h  GPUPipelineLayout.cpp  GPUPipelineLayout.h  GPURenderPass.h  GPUResourceBase.h  GPUSemaphore.h  GPUShader.h  GPUSwapChain.cpp  GPUSwapChain.h
Source/Graphics/Vma/: vma.h
Source/Graphics2/: GPUFactory.cpp  GPUHelper.cpp  GPUHelper.h  GPUResource.cpp  GPUResourceBuilder.cpp  GPUResourceBuilder.h  GPUResourceHandle.h  GPUResourceManager.cpp  GPUShaderCompiler.cpp  GPUShaderCompiler.h  VulkanFiles.h
Source/Graphics2/Builder/: GPUBufferBuilder.cpp  GPUBufferBuilder.h  GPUDescriptorPoolBuilder.cpp  GPUDescriptorSetLayoutBuilder.h  GPUFenceBuilder.cpp  GPUFenceBuilder.h  GPUFrameBufferBuilder.cpp  GPUFrameBufferBuilder.h  GPUGraphicsPipelineBuilder.cpp  GPUImageBuilder.cpp  GPUImageBuilder.h  GPUPipelineLayoutBuilder.h  GPURenderPassBuilder.cpp  GPURenderPassBuilder.h  GPUSemaphoreBuilder.cpp  GPUSwapChainBuilder.cpp  GPUSwapChainBuilder.h
Source/Graphics2/GPUResource/: GPUBuffer.h  GPUCommandPool.cpp  GPUCommandPool.h  GPUDescriptorPool.cpp  GPUDescriptorPool.h  GPUDescriptorSetLayout.h  GPUFrameBuffer.cpp  GPUFrameBuffer.h  GPUGraphicsPipeline.cpp  GPUImage.cpp  (+8 more)
Source/Image/: image.cpp  image.h  stb_image.h  stb_image_resize.h  stb_image_write.h
Source/Managers/: DataLayoutManager.cpp  DataLayoutManager.hpp  DensifySystemManager.cpp  DensifySystemManager.hpp
Source/NodeSystem/: ContextDescriptor.cpp  ContextDescriptor.hpp  NodeDescriptor.cpp  NodeDescriptor.hpp  NodeSystem.cpp  NodeSystem.hpp  NodeSystemTypes.hpp  PinDescriptor.cpp  PinDescriptor.hpp
Source/Render/: RenderCommandDomain.cpp  RenderCommandDomain.h  RenderMachineCore.cpp  RenderMachineCore.h  RenderResourceGroup.cpp  RenderResourceGroup.h  RenderResourceSystem.h  RenderShaderSystem.cpp  RenderShaderSystem.h  RenderSystem.cpp  RenderSystem.h  RenderTaskGraph.cpp  RenderTaskGraph.h  RenderTaskGraphDomain.cpp  RenderTaskGraphDomain.h  RenderTaskSystem.cpp  RenderTaskSystem.h
Source/Vk/: Buffer.cpp  Buffer.hpp  CommandBuffer.cpp  CommandBuffer.hpp  CommandPool.cpp  CommandPool.hpp  CommandSubmitQueue.cpp  CommandSubmitQueue.hpp  Context.cpp  Context.hpp  DescriptorPool.cpp  DescriptorPool.hpp  DescriptorSet.cpp  DescriptorSet.hpp  DescriptorSetLayout.cpp  DescriptorSetLayout.hpp  Device.cpp  Device.hpp  GlslCompiler.cpp  GlslCompiler.hpp  GraphicsPipeline.cpp  GraphicsPipeline.hpp  GraphicsPipelineState.cpp  GraphicsPipelineState.hpp  Image.cpp  Image.hpp  ImageView.cpp  ImageView.hpp  Instance.cpp  Instance.hpp  PipelineLayout.cpp  PipelineLayout.hpp  Queue.cpp  Queue.hpp  RenderPass.cpp  RenderPass.hpp  ShaderModule.cpp  ShaderModule.hpp  SwapChain.cpp  SwapChain.hpp  (+4 more)
Source/WSCS/: WSCLexer.hpp  WSCS.hpp
Source/WarpEngine/: WarpBase.hpp  WarpEarCut.hpp  WarpEngine.cpp  WarpEngine.hpp  WarpError.hpp  WarpFastFloat.hpp  WarpString.cpp  WarpString.hpp  main.cpp  windows-helper.cpp  windows-helper.hpp
(+117 files in other folders)
